--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "dependencies": {
+    "amqplib": "^0.10.0",
     "express": "^4.18.1",
     "mssql": "^8.1.2"
   },
