--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "type": "module",
+  "main": "server.js",
   "dependencies": {
     "amqplib": "^0.10.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "docker": "^1.0.0",
     "express": "^4.18.1",
-    "mssql": "^8.1.2"
+    "express-jwt": "^7.7.5",
+    "express-session": "^1.17.3",
+    "joi": "^17.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "mssql": "^8.1.2",
+    "rootpath": "^0.1.2",
+    "sequelize": "^6.21.3",
+    "tedious": "^14.7.0"
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "author": "",
   "license": "ISC"
